finished header section

--- a/index.html
+++ b/index.html
@@ -21,21 +21,32 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Devlopers</a></li>
-                    <button class="btn-primary">Follow Us On <i class="fa-brands fa-youtube"></i> <i class="fa-brands fa-tiktok"></i></button>
+                    <button class="btn-primary">Follow Us On <i class="fa-brands fa-youtube" style="color: red;"></i> <i class="fa-brands fa-tiktok" style="color: black;"></i></button>
                 </ul>
                 
             </nav>
         </section>
         <section>
-            <div class="banner-contant">
-                <h4>Play Like The</h4>
+            <div class="banner">
+                <div class="banner-content">
+                    <h4>Play Like The</h4>
                 <h1>G.O.A.T.</h1>
-                <p>1-Click instant play</p>
+                <p> <i class="fa-regular fa-circle-play" style="color: deeppink;"></i> 1-Click instant play</p>
+                <p> <i class="fa-solid fa-download" style="color: deeppink;"></i>No Download</p>
+                <p> <i class="fa-solid fa-user-group" style="color: black;"></i>1000s of supported online games</p>
+                <button class="sign">
+                    <a href="">SIGN IN</a>
+                </button>
+                <button class="go">
+                    <a href="">GO ROGUE</a>
+                </button>
 
+                </div>
 
-
+                <div class="banner-image">
+                    <img src="images/Group 18.png" alt="">
+                </div>
             </div>
-            <div class="banner-image"></div>
         </section>
 
     </header>
