finished play section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gamer Zone</title>
     <link rel="stylesheet" href="styles/game.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" href="images/Frame.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -48,6 +49,52 @@
                 </div>
             </div>
         </section>
+
+        <main>
+            <section class="games">
+
+                    <h1 class="games-title">Online Games <sapn class="games-style">Funny Videos</sapn></h1>
+                    <p class="games-discription">A Collection of Hilarious Videos to Brighten Your Day</p>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <p class="despo">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="card rocket">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <p class="despo">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="card">
+                        <i class="fa-regular fa-circle-play"></i><img src="images/Rectangle 7.png" alt="">
+                        <p class="despo">Breaking game records like OG</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <p class="despo">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="play">
+                <div class="play-instant">
+                    <div class="play-content">
+                        <h2><span>Play Instantly,</span><br>
+                            No Downloads <br>
+                            No Installs.</h2>
+                            <p class="relax">Play games online for free withou
+                                 downloading. Just click the Play button
+                                  and play instantly in your browser.</p>
+                    </div>
+                    <div class="play-img">
+                        <img src="images/Rectangle 55.png" alt="">
+                        <div class="play-badge">
+                           <img src="images/Rectangle 66.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
     </header>
 </body>
