finished footer section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,38 @@
         </main>
 
         <footer class="dancer">
-       
+            <div class="logo-two">
+                <img src="images/Frame.png" alt="">
+                <h1>
+                 <span>G</span><span style="color: aliceblue;">amer</span>
+                </h1>
+            
+            </div>
+            <div class="db">
+                <button class="chaba"><a href="#">Our Story</a></button>
+                <button class="chaba"><a href="#">Games</a></button>
+                <button class="chaba"><a href="#">Web Games</a></button>
+                <button class="chaba"><a href="#">Careers</a></button>
+                <button class="chaba"><a href="#">Support</a></button>
+                <button class="chaba"><a href="#">My Account</a></button>
+            </div>
+            <div class="mouse">
+                <a href=""><i class="fa-brands fa-twitter" style="color: antiquewhite;"></i></a>
+                <a href=""><i class="fa-brands fa-square-facebook" style="color: aliceblue;"></i></a>
+                <a href=""><i class="fa-brands fa-square-youtube" style="color: aliceblue;"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin-in" style="color: aliceblue;"></i></a>
+                <a href=""><i class="fa-brands fa-instagram" style="color: aliceblue;"></i></a>
+                <a href=""><i class="fa-brands fa-apple" style="color: aliceblue;"></i></a>
+            </div>
+            <div class="dj">
+                <a href="">Terms and Conditions</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Cookie Policy</a>
+                <a href="">Privacy Settings</a>
+            </div>
+           <div class="chek">
+            <h4>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</h4>
+           </div>
         </footer>
 
     </header>
